完成 UnitofWork 和EF Code First

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionString": "server=.;DataBase=Trace;Trusted_Connection=True;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
