--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,7 @@
 {
-  "ConnectionString": "server=.;DataBase=Trace;Trusted_Connection=True;",
+  "ConnectionStrings": {
+    "SqlServer": "server=.;DataBase=Trace;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
