--- a/Trace_Api.csproj
+++ b/Trace_Api.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="EntityFrameworkCore.Data.AutoHistory" Version="6.0.22" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.36" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.36" />
